--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@ DJANGO_SETTINGS_MODULE = survey_project.settings
 python_files = tests.py test_*.py
 python_paths = .
 addopts = --nomigrations --cov=. --cov-report=html
+markers =
+    deb: for debugging
