--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ certifi = "2022.6.15"
 cffi = "1.15.1"
 charset-normalizer = "2.0.12"
 click = "8.1.3"
-colorama = "0.4.4"
 coverage = "6.4.1"
 cryptography = "37.0.2"
 dj-database-url = "0.5.0"
@@ -30,7 +29,6 @@ idna = "3.3"
 iniconfig = "1.1.1"
 outcome = "1.2.0"
 packaging = "21.3"
-pathspec = "0.8.1"
 pluggy = "1.0.0"
 psycopg2 = "2.9.3"
 psycopg2-binary = "2.9.3"
@@ -59,7 +57,14 @@ urllib3 = "1.26.9"
 webdriver-manager = "3.7.1"
 whitenoise = "6.1.0"
 wsproto = "1.1.0"
+pathspec = "^0.10.1"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^22.10.0"
+isort = "^5.10.1"
+pylint = "^2.15.5"
+pylint-django = "^2.5.3"
 
 [build-system]
 requires = ["poetry-core"]
