--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 antlr4-python3-runtime==4.8
 asgiref==3.5.1
+astroid==2.12.12
 async-generator==1.10
 atomicwrites==1.4.0
 attrs==21.4.0
+black==22.10.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.0.12
 click==8.1.3
-colorama==0.4.4
+colorama==0.4.6 and platform_system == "Windows" or python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
 coverage==6.4.1
 coverage[toml]==6.4.1
 cryptography==37.0.2
+dill==0.3.6
 dj-database-url==0.5.0
 django-heroku==0.3.1
 django==4.0.4
@@ -19,14 +22,22 @@ gunicorn==20.1.0
 h11==0.13.0
 idna==3.3
 iniconfig==1.1.1
+isort==5.10.1
+lazy-object-proxy==1.8.0
+mccabe==0.7.0
+mypy-extensions==0.4.3
 outcome==1.2.0
 packaging==21.3
-pathspec==0.8.1
+pathspec==0.10.1
+platformdirs==2.5.2
 pluggy==1.0.0
 psycopg2-binary==2.9.3
 psycopg2==2.9.3
 py==1.11.0
 pycparser==2.21
+pylint-django==2.5.3
+pylint-plugin-utils==0.7
+pylint==2.15.5
 pymysql==1.0.2
 pyopenssl==22.0.0
 pyparsing==3.0.9
@@ -44,10 +55,13 @@ sortedcontainers==2.4.0
 sqlparse==0.4.2
 toml==0.10.2
 tomli==2.0.1
+tomlkit==0.11.6
 trio-websocket==0.9.2
 trio==0.21.0
+typing-extensions==4.4.0 ; python_version >= "3.9" and python_version < "3.10"
 tzdata==2022.1
 urllib3==1.26.9
 webdriver-manager==3.7.1
 whitenoise==6.1.0
+wrapt==1.14.1
 wsproto==1.1.0
