--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,7 @@
 SECRET_KEY=123456
-DATABASE_URL=postgres://someusername:somepassword111@192.168.0.12:5432/my_db_name
+DATABASE_URL=postgres://someusername:somepassword111@192.168.0.12:5434/my_db_name
 IS_DEBUG=True
+DJANGO_SETTINGS_MODULE=1
+POSTGRES_USER=someusername
+POSTGRES_PASSWORD=somepassword111
+POSTGRES_DB=my_db_name
